plain_k8s_manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: klingon-cloaking-device
  namespace: klingon-cloaking-device
spec:
  replicas: 1
  selector:
    matchLabels:
      app: klingon-cloaking-device
  template:
    metadata:
      labels:
        app: klingon-cloaking-device
    spec:
      serviceAccountName: klingon-cloaking-device
      containers:
        - name: klingon-cloaking-device
          image: ghcr.io/thenotary/klingon-cloaking-device-server:latest # <-- UPDATE
          ports:
            - containerPort: 9000
              protocol: UDP
              name: knock
            - containerPort: 9001
              protocol: TCP
              name: auth
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 256Mi
          readinessProbe:
            tcpSocket:
              port: 9001
            initialDelaySeconds: 3
            periodSeconds: 5
          livenessProbe:
            tcpSocket:
              port: 9001
            initialDelaySeconds: 5
            periodSeconds: 10
          volumeMounts:
            - name: tls-certs
              mountPath: /certs
              readOnly: true
      volumes:
        - name: tls-certs
          secret:
            secretName: klingon-cloaking-device-tls  # <-- UPDATE: your kubernetes.io/tls Secret
